<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="heading">YaSTroid Servers</string>
    <string name="app_name">YaSTroid</string>
    <string name="no_servers_found">No WebYaST server found</string>
    <string name="network_status_text">Network</string>
    <string name="memory_status_text">Memory</string>
    <string name="disk_status_text">Disk</string>
    <string name="cpu_status_text">CPU</string>
    <string name="system_msgs_status_text">System Messages</string>
    <string name="server_list_activity">WebYaST Servers</string>
    <string name="server_add_activity">Add WebYaST Server</string>
    <string name="system_status_activity">System Status</string>
    <string name="display_resource_activity">Resource Status</string>
    <string name="group_list_activity">Groups</string>
    <string name="group_add_activity">Add Group</string>
	<string name="server_unreachable">WebYaST Server Unreachable</string>
	<string name="no_groups_found">No groups found</string>
	<string name="server_activity">Server Maintenance</string>
	<string name="add_server_title">WebYaST Server Settings</string>
	<string name="add_server_name">Name</string>
	<string name="add_server_hostname">Hostname</string>
	<string name="add_server_port">Port</string>
	<string name="add_server_user">User</string>
	<string name="add_server_password">Password</string>
	<string name="add_server_button">Add</string>
	<string name="add_group_name">Name</string>
	<string name="add_group_description">Description</string>
	<string name="add_group_icon">Icon</string>
	<string name="add_group_button">Add</string>
	<string name="time_label">Show last:</string>
	<string name="time_prompt">Select Display Length</string>
	<string name="system_messages_activity">System Messages</string>
	<string name="no_messages_found">No System Messages Found</string>
	<string name="webyast_Server_info">WebYaST Server Info</string>
	<string-array name="times_array"><item>5 Minutes</item>
	<item>15 Minutes</item>
	<item>1 Hour</item>
	<item>12 Hours</item>
	</string-array>
</resources>
